WCAG contrast ratio for dark mode lang select fixed

--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -24,7 +24,8 @@
   --light-background: #586f7c;
   --alternate-background: #22506a;
   --accent: #000000;
-  --button-border: #b8dbd9;
+  --light-accent: #a8eafd;
+  --button-border: #c9e4e3;
   --solid-button: #be8325;
   --solid-button-active: #ead027;
   --solid-button-hover: #fb923c;
